<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.need2.turnitup.beta.DonateActivity"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        
        <TextView
        android:id="@+id/ys_header"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/blue_block"
        android:gravity="center"
        android:text="@string/donate"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/donate_desc"
            android:gravity="center_horizontal|top"
            android:textSize="19sp" />

        <Button
            android:id="@+id/textButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/custom_green_button_1"
            android:text="@string/text_donate"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/customButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/custom_green_button_3"
            android:text="@string/custom_donate"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

</FrameLayout>
