<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginTop="4dp"
    android:orientation="vertical"
    tools:context="com.need2.turnitup.beta.MainActivity"
    tools:ignore="MergeRootFrame" >

    <!-- Use 0dp to allow weight to control height -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/odometerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/odometer"
            android:gravity="center"
            android:text="0038045"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/odo_message"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/tiu_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        android:layout_weight="1.4"
        android:background="@drawable/custom_red_button"
        android:text="@string/tiu_button"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold" />          
    
      <Button
          android:id="@+id/noiseGen_button"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_margin="3dp"
          android:layout_weight="1"
          android:background="@drawable/custom_orange_button"
          android:text="@string/noise_button"
          android:textColor="#ffffff"
          android:textSize="30sp"
          android:textStyle="bold" />

    <Button
        android:id="@+id/youthspace_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:layout_weight="1.4"
        android:background="@drawable/custom_blue_button"
        android:text="@string/youthspace_button"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/need2_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".1"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/need2_message"
        android:textSize="20sp" />

</LinearLayout>