<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/youthspace_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.need2.turnitup.beta.YoutspaceServicesActivity"
    tools:ignore="MergeRootFrame" >

    <!-- Use 0dp to allow weight to control height -->

    <TextView
        android:id="@+id/ys_header"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/blue_block"
        android:gravity="center"
        android:text="@string/ys_header"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/chat_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:layout_weight="2"
        android:background="@drawable/custom_green_button_1"
        android:padding="15dp"
        android:text="@string/chat_button"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/forum_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:layout_weight="1.88"
        android:background="@drawable/custom_green_button_2"
        android:padding="15dp"
        android:text="@string/forum_button"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/phone_directory_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:layout_weight="2"
        android:background="@drawable/custom_green_button_3"
        android:padding="15dp"
        android:text="@string/phone_directory_button"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

</LinearLayout>